fixed bug where tabs wouldn't load due another function having the same name; fixed the logic issue on the music-player page. Added animation styling to sidebar on mobile view.

--- a/static/css/music.css
+++ b/static/css/music.css
@@ -534,10 +534,17 @@ body {
     }
 
     #side-bar {
+        animation-name: sidebar-collapse;
+        animation-duration: 0.5s;;
         display: none;
-        height: 70%;
+        height: 96%;
         top: 36px;
         width: 100%;
+    }
+
+    @keyframes sidebar-collapse {
+        from {height: 0%}
+        to {height: 96%}
     }
 
     #side-bar-bottom {
